# sep-api

./: .gitignore  CLAUDE.md  LICENSE  README.md  debug_send.py  environment.yml  home_page.html  login.py  pyproject.toml  send_code_response.html
.github/workflows/: publish.yml
skills/: sep-api.md
src/sep_api/: __init__.py  api.py  app.py  captcha.py  cli.py  client.py  deps.py  models.py
src/sep_api/routers/: auth.py  courses.py  user.py  xkcts.py
src/sep_api/services/: __init__.py  base.py  xkcts.py  xkgo.py
tests/: test_client.py
